<resources>
    <string name="app_name">Varanus</string>
    <string name="Submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">Animal Care and Enrichment Tracker</string>
    <string name="enter_string">Enter</string>
    <string name="log_in">Welcome! Log in below.</string>
    <string name="password">Password</string>
    <string name="tasks_button">Tasks</string>
    <string name="animals_button">Animals</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="tasks">Today\'s Tasks</string>
    <string name="check_me">check_me</string>
    <string name="species">Species</string>
    <string name="task">Task</string>
    <string name="completed">Completed</string>
    <string name="choose_a_food_type">Food Type</string>
    <string name="choose_food_count">Food Count</string>
    <string name="sample_varanus">sample varanus</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="select_profile_option">Select a Report</string>
    <string name="default_task_description">Hello, %1$s! Thank you for %2$s. Please click Submit below to let us know you\'re done.</string>
    <string name="task_description">Hello, %1$s! Thank you for %2$s. Please %3$s below and click Submit.</string>
    <string name="email_summary_description">Hello, %1$s! Enter the recipient email address and the time frame below to receive a report on %2$s\'s health.</string>
    <string name="add_animal_description">Hello, %1$s! Enter the animal\'s name, upload a picture of them, tell us their species and where they live!</string>

    <!-- Food Type activity -->
    <string-array name="foodType">
        <item>@string/choose_a_food_type</item>

        <item>Crickets</item>
        <item>Rats</item>
    </string-array>

    <string-array name="rat_food_types">
        <item>@string/choose_a_food_type</item>

        <item>tbsp. Pellets</item>
        <item>Fruits</item>
        <item>Veggies</item>
    </string-array>

    <string-array name="lizard_food_types">
        <item>@string/choose_a_food_type</item>

        <item>Calcium-dusted crickets</item>
    </string-array>

    <string-array name="toad_food_types">
        <item>@string/choose_a_food_type</item>

        <item>Calcium-dusted crickets</item>
    </string-array>

    <string-array name="turtle_food_types">
        <item>@string/choose_a_food_type</item>

        <item>Veggies</item>
        <item>tbsp. Pellets</item>
        <item>Veggies</item>
    </string-array>

    <string-array name="snake_food_types">
        <item>@string/choose_a_food_type</item>

        <item>Mice</item>
    </string-array>

    <string-array name="crayfish_food_types">
        <item>@string/choose_a_food_type</item>

        <item>Pellets</item>
        <item>Worms</item>
        <item>Lettuce</item>
    </string-array>

    <string-array name="goldfish_food_types">
        <item>@string/choose_a_food_type</item>

        <item>Flakes</item>
    </string-array>

    <string-array name="roachfish_food_types">
        <item>@string/choose_a_food_type</item>

        <item>Flakes</item>
        <item>Worms</item>
    </string-array>

    <!-- Food Type activity -->
    <string-array name="foodCount">
        <item>@string/choose_food_count</item>

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="profile_options">
        <item>@string/select_profile_option</item>

        <item>Diet</item>
        <item>Exercise</item>
        <item>Enclosure</item>
        <item>Behavior</item>
        <item>Email Summary</item>
    </string-array>

    <string-array name="general_clean_levels">
        <item>Select clean level</item>
        <item>Not Cleaned</item>
        <item>Cleaned</item>
        <item>Deep Cleaned</item>
    </string-array>

    <string-array name="enclosure_options">
        <item>Select enclosure</item>
        <item>Classroom</item>
        <item>Visitor Center</item>
        <item>Office</item>
    </string-array>

    <string-array name="species_options">
        <item>Select species</item>
        <item>Crayfish</item>
        <item>Turtle</item>
        <item>Roach Fish</item>
        <item>Goldfish</item>
        <item>Rat</item>
        <item>Snake</item>
        <item>Lizard</item>
        <item>Toad</item>
    </string-array>

    <string-array name="hide_clean_levels">
        <item>Select clean level</item>
        <item>Refreshed</item>
        <item>Not Refreshed</item>
    </string-array>

    <string-array name="feces_clean_levels">
        <item>Select clean level</item>
        <item>Removed</item>
        <item>Not Removed</item>
    </string-array>

    <!-- common lists -->
    <string-array name="common_veggies_list">
        <item>Select clean level</item>
        <item>Removed</item>
        <item>Not Removed</item>
    </string-array>

    <string-array name="common_treats_list">
        <item>Select clean level</item>
        <item>Removed</item>
        <item>Not Removed</item>
    </string-array>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_email_summary">EmailSummaryActivity</string>


</resources>
